  . Added CachingIterator::TOSTRING_USE_INNER, calls inner iterator __toString.
  . Added ability to set the CSV separator per SplFileObject.
- Improved xmlReader: (Rob)
  . Added readInnerXml(), xmlReader::setSchema().
  . Added readInnerXML(), readOuterXML(), readString(), setSchema(). (2.6.20+)
  . Changed to passing libxml options when loading reader.

- Added JSON and Filter extensions. (Derick, Rasmus)
- Added error messages to disk_free_space() and disk_total_space()
  functions. FR #37971 (Tony)
- Added PATHINFO_FILENAME option to pathinfo() to get the filename. (Toby S. 
  and Christian S.)
- Added array_fill_keys() function. (Marcus, Matthew Wilmas)
- Added posix_initgroups() function. (Ilia)
- Added an optional parameter to parse_url() to allow retrieval of distinct URL
  components. (Ilia)
- Added optional parameter to http_build_query() to allow specification of
  string separator. (Ilia)
- Added image_type_to_extension() function. (Hannes, Ilia)
- Added allow_url_include ini directive to complement allow_url_fopen. (Rasmus)
- Added automatic module globals management. (Dmitry)
- Added RFC2397 (data: stream) support. (Marcus)
- Added new error mode E_RECOVERABLE_ERROR. (Derick, Marcus, Tony)
- Added support for getenv() input filtering. (Rasmus)
- Added support for constructors in interfaces to force constructor signature
  checks in implementations. (Marcus)
- Added memory_get_peak_usage() function for retrieving peak memory usage of
  a PHP script. (Ilia)
- Added pg_field_table() function. (Edin)
- Added SimpleXMLElement::saveXML() as an alias for SimpleXMLElement::asXML().
  (Hannes)
- Added DOMNode::getNodePath() for getting an XPath for a node. (Christian)
- Added gmp_nextprime() function. (ants dot aasma at gmail dot com, Tony)
- Added error_get_last() function. (Mike)

- Optimized zend_try/zend_catch macros by eliminating memcpy(3). (Dmitry)
- Optimized require_once() and include_once() by eliminating fopen(3)
  on second usage. (Dmitry)